Fixed a bug that prevented exiting the keyboard when searching the TT/FR databases
Returning to the 'Add Forum' dialog now returns to the previously selected item
After adding a forum from a list of forums, it now returns to the added forum in the list
Forums that are already added are now marked as already added when browsing/searching databases

*** 2.1.22 ***

Changes to make encoding handling more correct
Some skin tweaks for Add Forum forum descriptions
Changed 'Add Forum' descriptions. Example 'Search 60,000+ forums' instead of 'Search the more than 60,000 forums'

*** 2.1.21 ***

Fix a bug I made causing errors on tapatalk forums

*** 2.1.20 ***

Video Skin: Added forum description box for forum list on 'Add Forum' (like on the other skins)
Changed Forumrunner icon to reflect Forumrunner's actual icon
Various encoding handling improvements

*** 2.1.19 ***

Fix for encoding errors preventing the display of the post view on some forums

*** 2.1.18 ***

Now shows and uses Forumrunner forum icons from the FR database
Added category icons for Tapatalk database
Added search, next and previous icons for databases
Fixed error when adding forums (created in last update) 
Added 'Back' option when browsing FR/TT databases to return to the categories/search menu or parent category
Exiting FB/TT/FR database browsing now returns to the FB/TT/FR menu
Removed the 'Add From Online' button. Now 'Add Forum' will show a choice between Forum Browser DB, Tapatalk DB, Forumrunner DB and adding manually 
Exiting the 'Add Forum' hierarchy will now cause a jump to the last added forum for all databases
Updated language files from Transifex

*** 2.1.17 ***

Fixed infinite loop when no forums returned on Tapatalk/Forumrunner database search
Added category browsing for Tapatalk & Forumrunner

*** 2.1.16 ***

Fixed encoding detection for the Parser Browser, enabling proper display of languages which use, for example, Cyrillic script