@@ -6,9 +6,11 @@ While this includes Tapatalk and Forumrunner forums, it only has those which wer
 
 Also includes Parser Browser forums, which are forums which do not use Tapatalk or Forumrunner and are handled by the internal Parser Browser. 
 @item:tt=Tapatalk
-Search 60,000+ Tapatalk enabled forums in the Tapatalk database.
+Brows and search 60,000+ Tapatalk enabled forums in the Tapatalk database.
 @item:fr=Forumrunner
-Search 7,500+ Forumrunner enabled forums in the Forumrunner database.
+Browse and search 7,500+ Forumrunner enabled forums in the Forumrunner database.
+@item:pb=ProBoards
+Search thousands of ProBoards forums in the ProBoards database.
 @item:manual=Manual
 Add a forum by entering it's domain or URL.
 
